# quiz-app

./: README.md
QuizClient/: biome.json  components.json  package.json  tsconfig.json
QuizClient/src/: middleware.tsx
QuizClient/src/app/: globals.css  layout.tsx
QuizClient/src/app/(quizzes)/: layout.tsx  loading.tsx  page.tsx
QuizClient/src/app/(quizzes)/create/: page.tsx
QuizClient/src/app/[quizId]/: page.tsx
QuizClient/src/app/auth/: layout.tsx
QuizClient/src/app/auth/sign-in/: page.tsx
QuizClient/src/lib/: api.ts  queryClient.tsx  refreshToken.ts  tanstackProvider.tsx  types.ts
QuizClient/src/modules/header/: index.tsx
QuizClient/src/shared/components/: index.ts
QuizClient/src/shared/hooks/: useDebounce.ts
QuizClient/src/shared/ui/: badge.tsx  checkbox.tsx  form.tsx  index.ts  sonner.tsx
QuizClient/src/shared/utils/: getUserRole.ts  verifyJwt.ts
QuizServer/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
QuizServer/alembic/: env.py
QuizServer/alembic/versions/: 104583eb7979_added_rating_field.py  4528a7fb05bb_added_rating_field.py  6bbdaffc4710_changed_rating_config.py  7309741c0ee9_first_test_migrations.py  9a8b984125ca_added_rating_field.py
QuizServer/src/: __init__.py  config.py  database.py  exceptions.py  main.py  schemas.py  service.py
QuizServer/src/auth/: config.py  dependencies.py  exceptions.py  models.py  routes.py  schemas.py  service.py  utils.py  validators.py
QuizServer/src/quiz/: dependencies.py  exceptions.py  models.py  routes.py  schemas.py  service.py  utils.py
(+56 files in other folders)
