[project]
name = "quizapplication"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aioboto3>=14.3.0",
    "alembic>=1.15.2",
    "alembic-postgresql-enum>=1.7.0",
    "asyncio-redis>=0.16.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "black>=25.1.0",
    "coverage>=7.8.2",
    "fastapi>=0.115.12",
    "fastapi-mail>=1.5.0",
    "fastapi-pagination>=0.13.2",
    "filetype>=1.2.0",
    "greenlet>=3.2.2",
    "jinja2>=3.1.6",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "ruff>=0.12.5",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
